# microbitv1.5-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile
microbit/: CMakeLists.txt  microbit.h
microbit/cmake/toolchain/: arm-none-eabi-gcc.cmake
microbit/internal/: board.c  board.h  buttons.c  buttons.h  custom_board.h  delay.c  delay.h  display.c  display.h  gpio.c  gpio.h  i2c.c  i2c.h  lcd.c  lcd.h  microbit_startup.s  nrf_drv_config.h  pins.h  syscalls.c
microbit/linker/: microbit_s110.ld
src/: main.cpp
